--- a/app/src/main/res/layout/single_news_component.xml
+++ b/app/src/main/res/layout/single_news_component.xml
@@ -19,15 +19,15 @@
             android:scaleType="fitXY"
             android:src="@drawable/placeholder" />
 
-        <Button
-            android:id="@+id/save_button"
-            style="?attr/materialIconButtonFilledTonalStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            tool:icon="@drawable/ic_baseline_bookmark_border_24"
-            tool:layout_constraintEnd_toEndOf="parent"
-            tool:layout_constraintTop_toTopOf="parent" />
+<!--        <Button-->
+<!--            android:id="@+id/save_button"-->
+<!--            style="?attr/materialIconButtonFilledTonalStyle"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="end"-->
+<!--            tool:icon="@drawable/ic_baseline_bookmark_border_24"-->
+<!--            tool:layout_constraintEnd_toEndOf="parent"-->
+<!--            tool:layout_constraintTop_toTopOf="parent" />-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/news_title"
-                android:textColor="?attr/colorOnTertiaryContainer"
+                android:textColor="?attr/colorOnSurfaceVariant"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:text="@string/news_description"
-                android:textColor="?attr/colorOnTertiaryContainer"
+                android:textColor="?attr/colorOnSurfaceVariant"
                 android:textSize="16sp" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
@@ -69,7 +69,7 @@
                     android:layout_gravity="center"
                     android:contentDescription="@string/watch_icon"
                     android:src="@drawable/ic_baseline_access_time_24"
-                    tool:tint="?attr/colorOnTertiaryContainer" />
+                    tool:tint="?attr/colorOnSurfaceVariant" />
 
                 <TextView
                     android:id="@+id/news_time"
@@ -77,7 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/news_time"
-                    android:textColor="?attr/colorOnTertiaryContainer"
+                    android:textColor="?attr/colorOnSurfaceVariant"
                     android:textSize="14sp" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
