--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,64 +1,64 @@
 
 <resources>
-    <color name="seed">#745c00</color>
-    <color name="md_theme_light_primary">#735C00</color>
+    <color name="seed">#9b4526</color>
+    <color name="md_theme_light_primary">#9B4425</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_primaryContainer">#FFE088</color>
-    <color name="md_theme_light_onPrimaryContainer">#241A00</color>
-    <color name="md_theme_light_secondary">#695D3F</color>
+    <color name="md_theme_light_primaryContainer">#FFDBD0</color>
+    <color name="md_theme_light_onPrimaryContainer">#390C00</color>
+    <color name="md_theme_light_secondary">#77574C</color>
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#F1E1BB</color>
-    <color name="md_theme_light_onSecondaryContainer">#221B04</color>
-    <color name="md_theme_light_tertiary">#46664B</color>
+    <color name="md_theme_light_secondaryContainer">#FFDBD0</color>
+    <color name="md_theme_light_onSecondaryContainer">#2C160E</color>
+    <color name="md_theme_light_tertiary">#7F5700</color>
     <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#C8ECC9</color>
-    <color name="md_theme_light_onTertiaryContainer">#03210C</color>
+    <color name="md_theme_light_tertiaryContainer">#FFDEAD</color>
+    <color name="md_theme_light_onTertiaryContainer">#281900</color>
     <color name="md_theme_light_error">#BA1A1A</color>
     <color name="md_theme_light_errorContainer">#FFDAD6</color>
     <color name="md_theme_light_onError">#FFFFFF</color>
     <color name="md_theme_light_onErrorContainer">#410002</color>
     <color name="md_theme_light_background">#FFFBFF</color>
-    <color name="md_theme_light_onBackground">#1E1B16</color>
+    <color name="md_theme_light_onBackground">#201A18</color>
     <color name="md_theme_light_surface">#FFFBFF</color>
-    <color name="md_theme_light_onSurface">#1E1B16</color>
-    <color name="md_theme_light_surfaceVariant">#EBE1CF</color>
-    <color name="md_theme_light_onSurfaceVariant">#4C4639</color>
-    <color name="md_theme_light_outline">#7D7667</color>
-    <color name="md_theme_light_inverseOnSurface">#F7F0E7</color>
-    <color name="md_theme_light_inverseSurface">#33302A</color>
-    <color name="md_theme_light_inversePrimary">#E9C348</color>
+    <color name="md_theme_light_onSurface">#201A18</color>
+    <color name="md_theme_light_surfaceVariant">#F5DED7</color>
+    <color name="md_theme_light_onSurfaceVariant">#53433F</color>
+    <color name="md_theme_light_outline">#85736E</color>
+    <color name="md_theme_light_inverseOnSurface">#FBEEEA</color>
+    <color name="md_theme_light_inverseSurface">#362F2D</color>
+    <color name="md_theme_light_inversePrimary">#FFB59C</color>
     <color name="md_theme_light_shadow">#000000</color>
-    <color name="md_theme_light_surfaceTint">#735C00</color>
-    <color name="md_theme_light_outlineVariant">#CFC6B4</color>
+    <color name="md_theme_light_surfaceTint">#9B4425</color>
+    <color name="md_theme_light_outlineVariant">#D8C2BB</color>
     <color name="md_theme_light_scrim">#000000</color>
-    <color name="md_theme_dark_primary">#E9C348</color>
-    <color name="md_theme_dark_onPrimary">#3C2F00</color>
-    <color name="md_theme_dark_primaryContainer">#574500</color>
-    <color name="md_theme_dark_onPrimaryContainer">#FFE088</color>
-    <color name="md_theme_dark_secondary">#D4C5A1</color>
-    <color name="md_theme_dark_onSecondary">#393016</color>
-    <color name="md_theme_dark_secondaryContainer">#50462A</color>
-    <color name="md_theme_dark_onSecondaryContainer">#F1E1BB</color>
-    <color name="md_theme_dark_tertiary">#ACCFAE</color>
-    <color name="md_theme_dark_onTertiary">#19371F</color>
-    <color name="md_theme_dark_tertiaryContainer">#2F4E34</color>
-    <color name="md_theme_dark_onTertiaryContainer">#C8ECC9</color>
+    <color name="md_theme_dark_primary">#FFB59C</color>
+    <color name="md_theme_dark_onPrimary">#5C1900</color>
+    <color name="md_theme_dark_primaryContainer">#7C2E10</color>
+    <color name="md_theme_dark_onPrimaryContainer">#FFDBD0</color>
+    <color name="md_theme_dark_secondary">#E7BDB0</color>
+    <color name="md_theme_dark_onSecondary">#442A21</color>
+    <color name="md_theme_dark_secondaryContainer">#5D4036</color>
+    <color name="md_theme_dark_onSecondaryContainer">#FFDBD0</color>
+    <color name="md_theme_dark_tertiary">#FCBB4A</color>
+    <color name="md_theme_dark_onTertiary">#432C00</color>
+    <color name="md_theme_dark_tertiaryContainer">#604100</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFDEAD</color>
     <color name="md_theme_dark_error">#FFB4AB</color>
     <color name="md_theme_dark_errorContainer">#93000A</color>
     <color name="md_theme_dark_onError">#690005</color>
     <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#1E1B16</color>
-    <color name="md_theme_dark_onBackground">#E8E2D9</color>
-    <color name="md_theme_dark_surface">#1E1B16</color>
-    <color name="md_theme_dark_onSurface">#E8E2D9</color>
-    <color name="md_theme_dark_surfaceVariant">#4C4639</color>
-    <color name="md_theme_dark_onSurfaceVariant">#CFC6B4</color>
-    <color name="md_theme_dark_outline">#989080</color>
-    <color name="md_theme_dark_inverseOnSurface">#1E1B16</color>
-    <color name="md_theme_dark_inverseSurface">#E8E2D9</color>
-    <color name="md_theme_dark_inversePrimary">#735C00</color>
+    <color name="md_theme_dark_background">#201A18</color>
+    <color name="md_theme_dark_onBackground">#EDE0DC</color>
+    <color name="md_theme_dark_surface">#201A18</color>
+    <color name="md_theme_dark_onSurface">#EDE0DC</color>
+    <color name="md_theme_dark_surfaceVariant">#53433F</color>
+    <color name="md_theme_dark_onSurfaceVariant">#D8C2BB</color>
+    <color name="md_theme_dark_outline">#A08D87</color>
+    <color name="md_theme_dark_inverseOnSurface">#201A18</color>
+    <color name="md_theme_dark_inverseSurface">#EDE0DC</color>
+    <color name="md_theme_dark_inversePrimary">#9B4425</color>
     <color name="md_theme_dark_shadow">#000000</color>
-    <color name="md_theme_dark_surfaceTint">#E9C348</color>
-    <color name="md_theme_dark_outlineVariant">#4C4639</color>
+    <color name="md_theme_dark_surfaceTint">#FFB59C</color>
+    <color name="md_theme_dark_outlineVariant">#53433F</color>
     <color name="md_theme_dark_scrim">#000000</color>
 </resources>
